--- a/.github/workflows/First_example.yaml
+++ b/.github/workflows/First_example.yaml
@@ -3,14 +3,16 @@ name: My first workflow
 on: push
 
 jobs:
-    first_job:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Welcome message
-          run: echo 'Welcome to my first workflow file'
+  first_job:
+    runs-on: ubuntu-latest
 
-        - name: List of files
-          run: ls
+    steps:
+      - name: Welcome message
+        run: echo "Welcome to my first workflow file"
 
-        - name: Read the file
-          run: cat README.md
+      - name: List of files
+        run: ls
+
+      - name: Read the file
+        run: cat README.md
+
