add check out versions

--- a/.github/workflows/First_example.yaml
+++ b/.github/workflows/First_example.yaml
@@ -7,10 +7,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v6
       - name: Welcome message
         run: echo "Welcome to my first workflow file"
 
       - name: List of files
         run: ls 
-
+      - name: read file
+        run: cat README.md
 
