--- a/.github/workflows/First_example.yaml
+++ b/.github/workflows/First_example.yaml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v6
+      - name: Checkout repo
+        uses: actions/checkout@v6
       - name: Welcome message
         run: echo "Welcome to my first workflow file"
 
