--- a/.github/workflows/multiple-job.yaml
+++ b/.github/workflows/multiple-job.yaml
@@ -3,37 +3,53 @@ name: Run Multiple job
 on: push
 
 jobs:
-    
-    build_job:
-        
-        runs-on: ubuntu-latest
-        
+  
+  build_job:
+    runs-on: ubuntu-latest
 
-        steps:
-        - uses: actions/checkout@v6
-        - name: Install cowsay program
-          run: sudo apt-get install cowsay -y
-        - name: Execute the cowsay CMD
-          run: cowsay -f dragon "Run for cover, I am a Dragon.....Uicjidn" >> dragon.txt
+    steps:
+      - uses: actions/checkout@v4
 
-    test_job:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v6
-        - name: sleep for 10 seconds
-          run: sleep 10
+      - name: Install cowsay program
+        run: sudo apt-get install cowsay -y
 
-        - name: Test file exist
-          run: grep -i "dragon" dragon.txt
+      - name: Execute the cowsay CMD
+        run: cowsay -f dragon "Run for cover, I am a Dragon.....Uicjidn" >> dragon.txt
 
-    deploy_job:
-        runs-on: ubuntu-latest
-        
-        steps:
-        - uses: actions/checkout@v6
-        - name: Read the file
-          run: cat dragon.txt
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dragon-file
+          path: dragon.txt
 
-          
 
-        
+  test_job:
+    runs-on: ubuntu-latest
+    needs: build_job  # VERY IMPORTANT
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-file
+
+      - name: Test file exists
+        run: grep -i "dragon" dragon.txt
+
+
+  deploy_job:
+    runs-on: ubuntu-latest
+    needs: test_job  # VERY IMPORTANT
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-file
+
+      - name: Read the file
+        run: cat dragon.txt
