--- a/.github/workflows/multiple-job.yaml
+++ b/.github/workflows/multiple-job.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install cowsay program
         run: sudo apt-get install cowsay -y
@@ -17,7 +17,7 @@ jobs:
         run: cowsay -f dragon "Run for cover, I am a Dragon.....Uicjidn" >> dragon.txt
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dragon-file
           path: dragon.txt
@@ -25,13 +25,13 @@ jobs:
 
   test_job:
     runs-on: ubuntu-latest
-    needs: build_job  # VERY IMPORTANT
+    needs: build_job
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dragon-file
 
@@ -41,13 +41,13 @@ jobs:
 
   deploy_job:
     runs-on: ubuntu-latest
-    needs: test_job  # VERY IMPORTANT
+    needs: test_job
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dragon-file
 
