--- a/.github/workflows/multiple-job.yaml
+++ b/.github/workflows/multiple-job.yaml
@@ -16,11 +16,11 @@ jobs:
       - name: Execute the cowsay CMD
         run: cowsay -f dragon "Run for cover, I am a Dragon.....Uicjidn" >> dragon.txt
 
-    #   - name: Upload artifact
-    #     uses: actions/upload-artifact@v4
-    #     with:
-    #       name: dragon-file
-    #       path: dragon.txt
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dragon-file
+          path: dragon.txt
 
 
   test_job:
@@ -30,10 +30,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-    #   - name: Download artifact
-    #     uses: actions/download-artifact@v4
-    #     with:
-    #       name: dragon-file
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dragon-file
 
       - name: Test file exists
         run: grep -i "dragon" dragon.txt
@@ -46,10 +46,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-    #   - name: Download artifact
-    #     uses: actions/download-artifact@v4
-    #     with:
-    #       name: dragon-file
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dragon-file
 
       - name: Read the file
         run: cat dragon.txt
