--- a/.github/workflows/sec.yml
+++ b/.github/workflows/sec.yml
@@ -7,4 +7,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: disply the env variable and then values
-          run: echo "this is ${{ env.NAME }}"
+          run: echo "this is ${{ env.NAME }} byeeeeeeee"
