--- a/.github/workflows/concurrency2.yml
+++ b/.github/workflows/concurrency2.yml
@@ -14,7 +14,7 @@ jobs:
     needs: deploy
     concurrency:
       group: production-deploy
-      cancel-in-progress: true
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     steps:
       - run: echo "Running latest deployment..."
