the timeout yml file workflow stop

--- a/.github/workflows/timeout.yml
+++ b/.github/workflows/timeout.yml
@@ -8,4 +8,4 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Install dependencies
-        run: sleep 400  # 6 minutes (job will timeout before completion)
+        run: sleep 400  
