--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -8,9 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Show Job Context
-        run: echo "Job Context is ${{ toJson(job) }}"
-      - name: Show Job steps
-        run: echo "Job Context is ${{ toJson(steps) }}"
+        run: echo "Job Context is ${{ toJson(github) }}"
 
 
 
