--- a/.github/workflows/concurrent.yml
+++ b/.github/workflows/concurrent.yml
@@ -23,7 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: production-deploy
-      cancel-in-progress: true
+      cancel-in-progress: false
     steps:
       - run: echo "Deploying Hotfix Branch"
+
 
